# Parking-Lot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/enums/: enums.py
src/models/: vehicle.py
src/utils/: person.py
